fix: broken layouts with a long url

--- a/pages/markdown-content.css
+++ b/pages/markdown-content.css
@@ -1,3 +1,7 @@
+.content {
+  word-break: break-word;
+}
+
 .content img {
     width: 80%;
 }
